# open-miami

./: .gitignore  CLAUDE.md  Cargo.toml  ECS_ARCHITECTURE.md  Makefile  README.md  TESTING.md  build-wasm.sh  clippy.toml  index.html  open_miami.js  rustfmt.toml
.github/workflows/: ci.yml  e2e-tests.yml  screenshot.yml  wasm-build.yml
pkg/: open_miami.d.ts
src/: camera.rs  collision.rs  enemy.rs  game.rs  graphics.rs  input.rs  level.rs  lib.rs  main.rs  math.rs  pathfinding.rs  player.rs  render.rs  weapon.rs
src/components/: mod.rs
src/ecs/: component.rs  entity.rs  mod.rs  query.rs  system.rs  world.rs
src/systems/: ai.rs  combat.rs  input.rs  mod.rs  movement.rs  projectile.rs  weapon.rs
tests/: integration_tests.rs
tests/e2e/: README.md  package.json  playwright.config.js
tests/e2e/specs/: level-completion.spec.js
