[package]
name = "open-miami"
version = "0.1.0"
edition = "2021"
authors = ["c4ffein"]
license = "MIT"
description = "An open-source Hotline Miami clone in Rust for the browser"

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "console",
    "KeyboardEvent",
    "MouseEvent",
    "Performance",
] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1
