[package]
name = "open-miami"
version = "0.1.0"
edition = "2021"
authors = ["c4ffein"]
license = "MIT"
description = "An open-source Hotline Miami clone in Rust for the browser"
autobins = false

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "KeyboardEvent",
    "MouseEvent",
    "EventTarget",
    "Performance",
    "console",
] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1
